--- a/config_sample.env
+++ b/config_sample.env
@@ -2,11 +2,11 @@
 _____REMOVE_THIS_LINE_____=True
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
+BOT_TOKEN = "785606583:AAHHlXI1Ez0t6JSLS-ntt3CoyIkilQOZ608"
 GDRIVE_FOLDER_ID = ""
 OWNER_ID =
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = ""
-INDEX_URL = ""
+INDEX_URL = "https://testcloudd.herokuapp.com"
