Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,5 +1,4 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+#Remove this line before deployi
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
 BOT_TOKEN = "785606583:AAHHlXI1Ez0t6JSLS-ntt3CoyIkilQOZ608"
